--- a/style.css
+++ b/style.css
@@ -3,3 +3,71 @@ Header background - #FFDBAA
 button - #805215
 Header Text - #553100
 Main background - #D4A76A*/
+
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+}
+
+header {
+    background-color: #FFDBAA;
+    padding: 20px 0;
+}
+
+header h1 {
+    color: #553100;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: #553100;
+}
+
+main {
+    background-color: #D4A76A;
+    padding: 50px 0;
+    text-align: center;
+}
+
+section h2 {
+    color: #553100;
+}
+
+section p {
+    color: #553100;
+}
+
+button {
+    background-color: #805215;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+footer {
+    background-color: #FFDBAA;
+    padding: 20px 0;
+    text-align: center;
+}
+
+footer p {
+    color: #553100;
+}
+
